// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add unified plugins conditionally 1`] = `
"/* @jsx mdx */


const makeShortcode = name => function MDXDefaultShortcode(props) {
  console.warn(\\"Component \\" + name + \\" was not imported, exported, or provided by MDXProvider as global scope\\")
  return <div {...props}/>
};

const layoutProps = {
  
};
const MDXLayout = \\"wrapper\\"
export default function MDXContent({
  components,
  ...props
}) {
  return <MDXLayout {...layoutProps} {...props} components={components} mdxType=\\"MDXLayout\\">
    <h1>{\`With built-in layout\`}</h1>
    </MDXLayout>;
}

;
MDXContent.isMDXComponent = true;"
`;

exports[`add unified plugins conditionally 2`] = `
"/* @jsx mdx */
import _DefaultLayout from \\"post-layout\\"

const makeShortcode = name => function MDXDefaultShortcode(props) {
  console.warn(\\"Component \\" + name + \\" was not imported, exported, or provided by MDXProvider as global scope\\")
  return <div {...props}/>
};

const layoutProps = {
  
};
const MDXLayout = _DefaultLayout
export default function MDXContent({
  components,
  ...props
}) {
  return <MDXLayout {...layoutProps} {...props} components={components} mdxType=\\"MDXLayout\\">


    <h1>{\`With custom layout\`}</h1>
    </MDXLayout>;
}

;
MDXContent.isMDXComponent = true;"
`;
